# churn-alert-crew

./: README.md  pyproject.toml  report.md  requirements.txt
src/churn_crew/: crew.py  main.py
src/churn_crew/config/: agents.yaml  tasks.yaml
src/churn_crew/tools/: churn_ml_tool.py
