[project]
name = "churn_crew"
version = "0.1.0"
description = "churn-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
churn_crew = "churn_crew.main:run"
run_crew = "churn_crew.main:run"
train = "churn_crew.main:train"
replay = "churn_crew.main:replay"
test = "churn_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
